# PersonaBench

./: .gitignore  AGENTS.md  LANGCHAIN_DOCUMENTATION.md  LICENSE  PRD.md  README.md  __init__.py  completion_plan.md  dnd.md  index.html  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tailwind.config.ts  tsconfig.json  vite.config.ts
agents/: base_agent.py  llm_agent.py
bench/: __init__.py
docker/: Dockerfile  __init__.py
docs/: architecture.md  evaluation_design.md  langchain_examples.md  langchain_index.md  langchain_migration_guide.md  langchain_quickstart.md  langchain_service.md  llm_agent_configuration.md  operator_roles.md
games/: __init__.py  games.md
harness/: __init__.py  match.py  replay.py  runner.py
leaderboard/: __init__.py  submission_spec.md
orchestration/: __init__.py  app.py  auth.py  catalog.py  chains.py  routes.py  schemas.py  server.py  state.py  worker.py
personabench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
personas/: schema.json
scripts/: line-audit.mjs
src/: App.tsx  ErrorFallback.tsx  index.css  main.css  main.tsx  samplePersonas.ts
tests/: __init__.py  conftest.py  test_analytics.py  test_blackjack_adapter.py  test_blackjack_game_engine.py  test_evaluation_chain.py  test_evaluation_queue_api.py  test_evaluations_async.py  test_feedback_pipeline.py  test_heads_up_poker_adapter.py  test_llm_adapters.py  test_metrics.py  test_orchestration_crud.py  test_orchestration_transparency.py  test_persona_examples.py  test_poker_game_engine.py  test_queue_summary.py  test_simple_agent.py  (+4 more)
(+152 files in other folders)
